# FastGraphCut

./: .gitignore  CMakeLists.txt  LICENSE  README.md  bounding_boxes_small.txt  printnodes.txt  resize.py  small_dump.txt
benchmark/: .__afs5D26  README.md  grabcut.c  grabcut.cpp  grabcut.h  graph.hpp  yay.txt
benchmark/performance/: large.txt  large_dump.txt  medium.txt  medium_dump.txt  perf.py  plots.py  small.txt  small_dump.txt  timing.py  timing_large.txt  timing_medium.txt  timing_small.txt
dataset/: Fast_timing_large.txt  Fast_timing_medium.txt  Fast_timing_small.txt  bounding_boxes_large.txt  bounding_boxes_medium.txt  boundingbox.py  large_bb.txt  medium_bb.txt  plots.py  resize.py  small_bb.txt  timing_large.txt  timing_small.txt  xsmall_bb.txt
dataset/timing_par_km_1024/: timing_large.txt  timing_medium.txt  timing_small.txt
dataset/timing_par_km_128/: timing_large.txt  timing_medium.txt  timing_small.txt
dataset/timing_par_km_16/: timing_large.txt  timing_medium.txt  timing_small.txt
dataset/timing_par_km_256/: timing_large.txt  timing_medium.txt  timing_small.txt
dataset/timing_par_km_32/: timing_large.txt  timing_medium.txt  timing_small.txt
dataset/timing_par_km_512/: timing_large.txt  timing_medium.txt  timing_small.txt
dataset/timing_par_km_64/: timing_large.txt  timing_medium.txt  timing_small.txt
dataset/timing_par_km_shmem/: timing_large.txt  timing_medium.txt  timing_small.txt
dataset/timing_seq/: timing_medium.txt  timing_xsmall.txt
gpu/: grabcut.cu  grabcut.h  graph.hpp
